sonda-core/tests/snapshots/compile_after_fixtures__valid_compile_sequence_target.snap
---
source: sonda-core/tests/compile_after_fixtures.rs
expression: compiled
---
{
  "version": 2,
  "entries": [
    {
      "id": "seq",
      "signal_type": "metrics",
      "name": "health_probe",
      "rate": 2.0,
      "duration": "1m",
      "generator": {
        "type": "sequence",
        "values": [
          10.0,
          5.0,
          2.0,
          1.0
        ],
        "repeat": false
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      },
      "clock_group": "chain_alert",
      "clock_group_is_auto": true,
      "on_sink_error": "warn"
    },
    {
      "id": "alert",
      "signal_type": "metrics",
      "name": "alert",
      "rate": 2.0,
      "duration": "1m",
      "generator": {
        "type": "constant",
        "value": 1.0
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      },
      "phase_offset": "1s",
      "clock_group": "chain_alert",
      "clock_group_is_auto": true,
      "on_sink_error": "warn",
      "after_ref": "seq"
    }
  ]
}
