sonda-core/tests/snapshots/compile_after_fixtures__valid_compile_transitive_chain.snap
---
source: sonda-core/tests/compile_after_fixtures.rs
expression: compiled
---
{
  "version": 2,
  "entries": [
    {
      "id": "link",
      "signal_type": "metrics",
      "name": "interface_oper_state",
      "rate": 1.0,
      "duration": "10m",
      "generator": {
        "type": "flap",
        "up_duration": "60s",
        "down_duration": "30s"
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      },
      "clock_group": "chain_latency",
      "clock_group_is_auto": true,
      "on_sink_error": "warn"
    },
    {
      "id": "util",
      "signal_type": "metrics",
      "name": "backup_link_utilization",
      "rate": 1.0,
      "duration": "10m",
      "generator": {
        "type": "saturation",
        "baseline": 20.0,
        "ceiling": 85.0,
        "time_to_saturate": "2m"
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      },
      "phase_offset": "1m",
      "clock_group": "chain_latency",
      "clock_group_is_auto": true,
      "on_sink_error": "warn",
      "after_ref": "link"
    },
    {
      "id": "latency",
      "signal_type": "metrics",
      "name": "latency_ms",
      "rate": 1.0,
      "duration": "10m",
      "generator": {
        "type": "degradation",
        "baseline": 5.0,
        "ceiling": 150.0,
        "time_to_degrade": "3m"
      },
      "encoder": {
        "type": "prometheus_text"
      },
      "sink": {
        "type": "stdout"
      },
      "phase_offset": "152.308s",
      "clock_group": "chain_latency",
      "clock_group_is_auto": true,
      "on_sink_error": "warn",
      "after_ref": "util"
    }
  ]
}
